tests/NormalTests/paczka1/small_fuzzy/60799496.err
Error in line 2: OsH9 A196 27,5
Error in line 5: oinYBo3m00 S902 24,3
Error in line 1: kHFYkV478U A317 24,3
